# FailWarden-Orchestrator

./: .env.example  .env.local.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LAB.md  README.md  RELEASE.md  ROADMAP.md  check.sh  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: audit-model.md  execution-model.md  github-hardening.md  interview-notes.md  runbook-authoring-guide.md  schema.md  secrets-setup.md  threat-model-lite.md  validation-errors.md
docs/schema/: runbook-v1.schema.json
runbooks/: disk_full.yaml  http_endpoint_down.yaml  linux_service_down.yaml  ntp_drift.yaml  windows_service_down.yaml
runbooks/examples/invalid/: cycle_detected.yaml  duplicate_step_id.yaml  end_has_notify.yaml  escalate_has_branch.yaml  missing_branch_target.yaml  missing_entry_step.yaml  undefined_template_var.yaml  unreachable_step.yaml  unsupported_step_type.yaml
runbooks/examples/valid/: linux_service_down.yaml  windows_service_down.yaml
src/failwarden_orchestrator/: __init__.py  audit.py  cli.py  compiler.py  engine.py  models.py  persistence.py  reporting.py  validation.py
src/failwarden_orchestrator/executors/: __init__.py  base.py  ssh.py
src/failwarden_orchestrator/notifiers/: __init__.py  base.py  email.py  slack.py
src/failwarden_orchestrator/schema/: runbook-v1.schema.json
tests/: test_audit.py  test_cli.py  test_compiler.py  test_engine.py  test_notifiers.py  test_persistence.py  test_reporting.py  test_runbooks_shipped.py  test_skeleton.py  test_ssh_executor.py  test_transport_integration.py
