[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failwarden-orchestrator"
version = "0.1.0"
description = "Constrained, auditable YAML runbook executor for infrastructure remediation over SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.0",
  "Jinja2>=3.1.0",
  "jsonschema>=4.23.0",
  "paramiko>=3.4.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "bandit>=1.7.0",
  "pip-audit>=2.7.0",
]

[project.scripts]
fwo = "failwarden_orchestrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
failwarden_orchestrator = ["schema/*.json"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
